[package]
name = "dockers"
version = "0.1.5"
description = "A rust docker library"
license = "MIT"
authors = ["Francisco López <donflopez@gmail.com>"]
repository = "https://github.com/donflopez/dockers.git"
documentation = "https://docs.rs/dockers"
readme = "README.md"
keywords = ["docker", "api", "sync", "socket" ,"library"]

[dependencies]
quick-error = "1.2.2"
serde_derive = "1.0.91"
serde = "1.0.91"
serde_json = "1.0.39"
curl = "0.4.21"